--- a/run/Makefile
+++ b/run/Makefile
@@ -4,12 +4,12 @@ SVN_ROOT     := $(DOP_HOME)/PROJ_SVN
 DESIGN_PROJT := testcase
 DESIGN_PHASE := P1-trial
 DESIGN_BLOCK := chip
+DESIGN_STAGE := S40-APR
+DESIGN_VERSN := 2017_0615-xxx
 
-SRC_STAGE    := S00-INIT_DATA
-SRC_VERSN    := 2017_0610-xxx
+SOURCE_STAGE := S00-INIT_DATA
+SOURCE_VERSN := 2017_0610-xxx
 
-DST_STAGE    := S40-APR
-DST_VERSN    := 2017_0615-xxx
 
 TEST_FILE    := testfile
 TEST_DIR_    := testdir
