--- a/run/Makefile
+++ b/run/Makefile
@@ -1,6 +1,4 @@
-DOP_HOME     := $(HOME)/DOP_HOME
-SVN_ROOT     := $(DOP_HOME)/PROJ_SVN
-
+##################################
 DESIGN_PROJT := testcase
 DESIGN_PHASE := P1-trial
 DESIGN_BLOCK := chip
@@ -14,5 +12,8 @@ SOURCE_VERSN := 2017_0610-xxx
 TEST_FILE    := testfile
 TEST_DIR_    := testdir
 
+##################################
+DOP_HOME     := $(realpath $(PWD)/../..)
+SVN_ROOT     := $(DOP_HOME)/PROJ_SVN
 include $(DOP_HOME)/dvc/etc/mak/makefile.test
 
