--- a/etc/mak/makefile.test
+++ b/etc/mak/makefile.test
@@ -69,7 +69,7 @@ checkout_version:
 	@echo "#---------------------------------------------------"
 	dvc_checkout_version	$(DESIGN_VERSN) $(DESIGN_STAGE)
 
-container: create_container checkout_container checkin_object commit_container
+container: create_container checkout_container
 create_container:
 	@echo "#---------------------------------------------------"
 	@echo "# 4. Create container"
@@ -104,7 +104,8 @@ add_object:
 	@echo "# 5-1 Add file to container"
 	@echo "#---------------------------------------------------"
 	@echo "$(TMP_FILE)" > $(TMP_FILE)
-	dvc_add_object	$(TMP_FILE)
+	cp -f $(TMP_FILE) .container
+	dvc_add_object	$(DESIGN_CNTNR)	$(TMP_FILE)
 
 copy: copy_object
 copy_object:
@@ -112,8 +113,8 @@ copy_object:
 	@echo "# 5-2 Copy file to container"
 	@echo "#---------------------------------------------------"
 	@date +%Y%m%d_%H%M%S >> $(TEST_FILE)
-	dvc_copy_object	$(TEST_FILE)
-	dvc_copy_object	$(TEST_FILE)  newfile
+	dvc_copy_object	$(DESIGN_CNTNR)	$(TEST_FILE)
+	dvc_copy_object	$(DESIGN_CNTNR)	$(TEST_FILE)  newfile
 
 link: link_object
 link_object:
@@ -122,8 +123,8 @@ link_object:
 	@echo "#---------------------------------------------------"
 	@mkdir -p $(TEST_DIR_)
 	@date +%Y%m%d_%H%M%S >> $(TEST_DIR_)/$(TEST_FILE)
-	dvc_link_object	$(TEST_DIR_)
-	dvc_link_object	$(TEST_DIR_)  newdir
+	dvc_link_object	$(DESIGN_CNTNR)	$(TEST_DIR_)
+	dvc_link_object	$(DESIGN_CNTNR)	$(TEST_DIR_)  newdir
 
 rename: rename_object
 rename_object:
@@ -131,16 +132,16 @@ rename_object:
 	@echo "# 5-4 Rename file in container"
 	@echo "#---------------------------------------------------"
 	@mkdir -p old_$(TEST_DIR_)
-	dvc_add_object	old_$(TEST_DIR_)
-	dvc_move_object	old_$(TEST_DIR_)  new_$(TEST_DIR_)
+	dvc_add_object	$(DESIGN_CNTNR)	old_$(TEST_DIR_)
+	dvc_move_object	$(DESIGN_CNTNR)	old_$(TEST_DIR_)  new_$(TEST_DIR_)
 
 remove: remove_object
 remove_object:
 	@echo "#---------------------------------------------------"
 	@echo "# 5-5 Remove files in container"
 	@echo "#---------------------------------------------------"
-	dvc_remove_obj	$(TEST_FILE)
-	dvc_remove_obj	$(TEST_DIR_)
+	dvc_remove_object	$(DESIGN_CNTNR)	$(TEST_FILE)
+	dvc_remove_object	$(DESIGN_CNTNR)	$(TEST_DIR_)
 
 update: update_container
 update_container:
@@ -157,7 +158,7 @@ commit_container:
 	@echo "#---------------------------------------------------"
 	dvc_commit_container	$(DESIGN_CNTNR)
 
-list: list_version list_container
+list: list_version list_object
 list_version:
 	@echo "#---------------------------------------------------"
 	@echo "# 6-1 List all data in version"
@@ -166,12 +167,12 @@ list_version:
 	dvc_list_block
 	dvc_list_stage
 	dvc_list_version
+	dvc_list_container
 
-list_container:
+list_object:
 	@echo "#---------------------------------------------------"
 	@echo "# 6-2 List all data in container"
 	@echo "#---------------------------------------------------"
-	dvc_list_container
 	dvc_list_object	
 
 clean: clean_data
