--- a/etc/mak/makefile.test
+++ b/etc/mak/makefile.test
@@ -49,7 +49,8 @@ env:
 	@echo "#---------------------------------------------------"
 	@echo "# 1. Environment Variable"
 	@echo "#---------------------------------------------------"
-	dvc_get_env -v
+	dvc_set_env --global
+	dvc_set_env --local
 
 create: create_version
 create_version: $(SVN_ROOT)
@@ -132,16 +133,16 @@ rename_object:
 	@echo "# 5-4 Rename file in container"
 	@echo "#---------------------------------------------------"
 	@mkdir -p old_$(TEST_DIR_)
-	dvc_add_object	$(DESIGN_CNTNR)	old_$(TEST_DIR_)
-	dvc_move_object	$(DESIGN_CNTNR)	old_$(TEST_DIR_)  new_$(TEST_DIR_)
+	dvc_copy_object	$(DESIGN_CNTNR)	old_$(TEST_DIR_)
+	dvc_rename_object	$(DESIGN_CNTNR)	old_$(TEST_DIR_)  new_$(TEST_DIR_)
 
-remove: remove_object
-remove_object:
+delete: delete_object
+delete_object:
 	@echo "#---------------------------------------------------"
 	@echo "# 5-5 Remove files in container"
 	@echo "#---------------------------------------------------"
-	dvc_remove_object	$(DESIGN_CNTNR)	$(TEST_FILE)
-	dvc_remove_object	$(DESIGN_CNTNR)	$(TEST_DIR_)
+	dvc_delete_object	$(DESIGN_CNTNR)	$(TEST_FILE)
+	dvc_delete_object	$(DESIGN_CNTNR)	$(TEST_DIR_)
 
 update: update_container
 update_container:
@@ -158,22 +159,22 @@ commit_container:
 	@echo "#---------------------------------------------------"
 	dvc_commit_container	$(DESIGN_CNTNR)
 
-list: list_version list_object
+list: list_version list_container
 list_version:
 	@echo "#---------------------------------------------------"
 	@echo "# 6-1 List all data in version"
 	@echo "#---------------------------------------------------"
+	dvc_list_project
 	dvc_list_phase
 	dvc_list_block
 	dvc_list_stage
 	dvc_list_version
-	dvc_list_container
 
-list_object:
+list_container:
 	@echo "#---------------------------------------------------"
 	@echo "# 6-2 List all data in container"
 	@echo "#---------------------------------------------------"
-	dvc_list_object	
+	dvc_list_container 
 
 clean: clean_data
 clean_data: remove_project
