enrich document and makefile

--- a/run/Makefile
+++ b/run/Makefile
@@ -1,7 +1,6 @@
 ##################################
 DOP_HOME     := $(realpath $(PWD)/../..)
 SVN_ROOT     := $(DOP_HOME)/PROJ_SVN
-include $(DOP_HOME)/dvc/etc/mak/makefile.test
 
 ##################################
 DESIGN_PROJT := testcase
@@ -11,12 +10,8 @@ DESIGN_STAGE := S40-APR
 DESIGN_VERSN := 2017_0615-xxx
 DESIGN_CNTNR := place_opt
 
-SOURCE_STAGE := S00-INIT_DATA
-SOURCE_VERSN := 2017_0610-xxx
-TARGET_STAGE := S40-APR
-TARGET_VERSN := 2017_0610-xxx
-
-
 TEST_FILE    := testfile
 TEST_DIR_    := testdir
 
+include $(DOP_HOME)/dvc/etc/mak/makefile.design
+include $(DOP_HOME)/dvc/etc/mak/makefile.test
