--- a/etc/svn/svnserve.conf
+++ b/etc/svn/svnserve.conf
@@ -1,14 +1,16 @@
-# Default conf of DOP
+# Default conf of SVN server
 
 [general]
-anon-access = read
+realm = Design Operation Platform Repository
+anon-access = write
 auth-access = write
 password-db = passwd
 authz-db = authz
 groups-db = groups
-realm = Design Operation Platform Repository
-# force-username-case = none
-# hooks-env = hooks-env
+force-username-case = yes
+hooks-env = hooks-env
+store-passwords = no
+store-auth-creds = no
 
 [sasl]
 # use-sasl = true
